--- a/app/styles/new.css
+++ b/app/styles/new.css
@@ -33,7 +33,7 @@
 }
 
 .editor {
-    width: 100%;
+    min-width: 100%;
     height: 100%;
     padding: 0;
     margin: 0;
@@ -140,4 +140,19 @@
 
 .frame {
     font-family: "Inter";
+}
+
+.markdown-body {
+    box-sizing: border-box;
+    min-width: 200px;
+    max-width: 980px;
+    margin: 0 auto;
+    padding: 45px;
+    min-height: 100%;
+}
+
+@media (max-width: 767px) {
+    .markdown-body {
+        padding: 15px;
+    }
 }
