--- a/app/styles/github.css
+++ b/app/styles/github.css
@@ -9,8 +9,7 @@
     font-size: 16px;
     line-height: 1.5;
     word-wrap: break-word;
-    width: 100%;
-    height: 100%;
+    overflow-y: auto;
 }
 
 .markdown-body .octicon {
