--- a/app/styles/new.css
+++ b/app/styles/new.css
@@ -38,6 +38,7 @@
     height: 100%;
     padding: 0;
     margin: 0;
+    position: relative;
 }
 
 .editor > div {
@@ -57,10 +58,6 @@
     font-weight: 200;
     font-size: 0.825rem;
     color: var(--gray-600);
-}
-
-.highlight {
-    background-color: var(--gray-300);
 }
 
 .tab-selector {
@@ -145,11 +142,14 @@
 
 .markdown-body {
     box-sizing: border-box;
-    min-width: 200px;
-    height: 35rem;
+    min-width: 100%;
+    height: 35.5rem;
     margin: 0 auto;
     padding: 45px;
     overflow-y: auto;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 
 @media (max-width: 767px) {
@@ -230,6 +230,14 @@
     background-color: #ff9f7c;
     color: #ba3200;
     border: 1px solid #ba3200;
+}
+
+pre {
+    background-color: transparent;
+}
+
+.highlight {
+    background-color: transparent !important;
 }
 
 @keyframes fadein {
