Aligned commit button to GitHub file status

--- a/app/styles/manage.css
+++ b/app/styles/manage.css
@@ -49,6 +49,6 @@
     position: absolute;
     bottom: 0.825rem; /* Standard */
     right: 0.5rem;
-    color: #008800;
+    /* color: #008800; */
     font-size: 2.5rem;
 }
