--- a/app/styles/manage.css
+++ b/app/styles/manage.css
@@ -2,9 +2,10 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-auto-rows: 1fr;
-    grid-gap: 0.625rem;
+    grid-gap: 1rem;
     margin: 0;
     padding: 0.5rem;
+    margin-top: 0.625rem;
 }
 
 .manage > a {
@@ -42,7 +43,7 @@
     position: absolute;
     bottom: 1.2rem;
     left: 0.5rem;
-    font-size: 1rem;
+    font-size: 1.2rem;
 }
 
 .branch {
